--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/fontawesome-svg-core": "1.2.25",
     "@fortawesome/free-brands-svg-icons": "5.11.2",
     "@fortawesome/free-solid-svg-icons": "5.11.2",
+    "babylonjs": "^4.0.3",
     "core-js": "2.6.9",
     "ngx-bootstrap": "^5.3.0",
     "rxjs": "6.5.3",
